CLOSED FIXED60458
[Qt] fix fast/dom/Geolocation/window-close-crash.html
https://bugs.webkit.org/show_bug.cgi?id=60458
Summary [Qt] fix fast/dom/Geolocation/window-close-crash.html
Mahesh Kulkarni
Reported 2011-05-09 00:46:34 PDT
Fix skipped test case for Qt port fast/dom/Geolocation/window-close-crash.html
Attachments
patch (4.07 KB, patch)
2011-05-09 00:51 PDT, Mahesh Kulkarni
no flags
Mahesh Kulkarni
Comment 1 2011-05-09 00:51:49 PDT
Created attachment 92768 [details] patch update all pages with mock position/error/permission.
Andreas Kling
Comment 2 2011-05-09 03:50:33 PDT
Comment on attachment 92768 [details] patch r=me
Mahesh Kulkarni
Comment 3 2011-05-09 04:23:24 PDT
WebKit Review Bot
Comment 4 2011-05-09 08:46:19 PDT
http://trac.webkit.org/changeset/86049 might have broken GTK Linux 32-bit Debug The following tests are not passing: svg/W3C-SVG-1.1/animate-elem-46-t.svg
Mahesh Kulkarni
Comment 5 2011-05-10 03:42:05 PDT
Comment on attachment 92768 [details] patch false alarm. Patch committed clearing flags.
Ademar Reis
Comment 6 2011-05-10 14:07:06 PDT
Revision r86049 cherry-picked into qtwebkit-2.2 with commit 44acce9 <http://gitorious.org/webkit/qtwebkit/commit/44acce9>
Note You need to log in before you can comment on or make changes to this bug.