2011-05-09  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

Reviewed by Andreas Kling.

        [Qt] fix fast/dom/Geolocation/window-close-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60458

        Update all pages with Mock position/error/permission.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setGeolocationPermission):
        (LayoutTestController::setMockGeolocationError):
        (LayoutTestController::setMockGeolocationPosition):
2011-05-09  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] fix fast/dom/Geolocation/window-close-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60458

        Unskipping fast/dom/Geolocation/window-close-crash.html.

        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/75722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86049 268f45cc-cd09-0410-ab3c-d52691b4dbfc