Tools/DumpRenderTree/qt/LayoutTestControllerQt.cpp
@@ -778,12 +778,6 @@ void LayoutTestController::setMockDeviceOrientation(bool canProvideAlpha, double
     DumpRenderTreeSupportQt::setMockDeviceOrientation(canProvideAlpha, alpha, canProvideBeta, beta, canProvideGamma, gamma);
 }
 
-void LayoutTestController::setGeolocationPermission(bool allow)
-{
-    setGeolocationPermissionCommon(allow);
-    DumpRenderTreeSupportQt::setMockGeolocationPermission(m_drt->webPage(), allow);
-}
-
 QVariant LayoutTestController::shadowRoot(const QWebElement& element)
 {
     return DumpRenderTreeSupportQt::shadowRoot(element);
@@ -804,6 +798,14 @@ QString LayoutTestController::shadowPseudoId(const QWebElement& element)
     return DumpRenderTreeSupportQt::shadowPseudoId(element);
 }
 
+void LayoutTestController::setGeolocationPermission(bool allow)
+{
+    setGeolocationPermissionCommon(allow);
+    QList<WebCore::WebPage*> pages = m_drt->getAllPages();
+    foreach (WebCore::WebPage* page, pages)
+        DumpRenderTreeSupportQt::setMockGeolocationPermission(page, allow);
+}
+
 int LayoutTestController::numberOfPendingGeolocationPermissionRequests()
 {
     int pendingPermissionCount = 0;
@@ -822,12 +824,16 @@ void LayoutTestController::setGeolocationPermissionCommon(bool allow)
 
 void LayoutTestController::setMockGeolocationError(int code, const QString& message)
 {
-    DumpRenderTreeSupportQt::setMockGeolocationError(m_drt->webPage(), code, message);
+    QList<WebCore::WebPage*> pages = m_drt->getAllPages();
+    foreach (WebCore::WebPage* page, pages)
+        DumpRenderTreeSupportQt::setMockGeolocationError(page, code, message);
 }
 
 void LayoutTestController::setMockGeolocationPosition(double latitude, double longitude, double accuracy)
 {
-    DumpRenderTreeSupportQt::setMockGeolocationPosition(m_drt->webPage(), latitude, longitude, accuracy);
+    QList<WebCore::WebPage*> pages = m_drt->getAllPages();
+    foreach (WebCore::WebPage* page, pages)
+        DumpRenderTreeSupportQt::setMockGeolocationPosition(page, latitude, longitude, accuracy);
 }
 
 void LayoutTestController::addMockSpeechInputResult(const QString& result, double confidence, const QString& language)
